# ros2-lidar_camera

./: CMakeLists.txt  README.md
csv/: random_values.csv
include/fake_sensors/: camera_config.hpp  lidar_config.hpp
install/: local_setup.sh  setup.ps1  setup.sh  setup.zsh
install/fake_sensors/share/ament_index/resource_index/package_run_dependencies/: fake_sensors
install/fake_sensors/share/ament_index/resource_index/parent_prefix_path/: fake_sensors
install/fake_sensors/share/fake_sensors/: local_setup.sh  package.sh  package.xml
src/: camera_config.cpp  fake_camera.cpp  fake_lidar.cpp  lidar_config.cpp
src/install/: local_setup.sh  setup.bash  setup.sh
